Fix links shifting other elements down

--- a/src/index.css
+++ b/src/index.css
@@ -114,6 +114,7 @@ footer {
   padding-bottom: 2px;
   transition: border-bottom 0.5s, padding-bottom 0.5s;
   cursor: pointer;
+  margin: 0 0 0.5rem 0;
 }
 
 .link:hover {
